# tCLI

./: .gitignore  README.md  openapi.json  pyproject.toml  tcli.spec
.github/workflows/: build.yml
src/tcli/: __init__.py  api.py  config.py  main.py  models.py  output.py
